Added sales module functionality